.vibe/work/I-18-security-safety-hooks-policy/I-18A-security-policy-package/fifth-post-fix-revalidation-evidence/witnesses/cli-context-import.stderr
file:///Users/lizavasilyeva/work/vibe-engineer/packages/cli/[eval1]:1
const security = await import(\x27@vibe-engineer/security\x27); const result = security.__i18aCliBoundarySmoke ? security.__i18aCliBoundarySmoke() : {ok: true, exports: Object.keys(security).sort()}; console.log(JSON.stringify(result));
                              ^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:317:16)
    at ModuleLoader.createModuleWrap (node:internal/modules/esm/loader:239:12)
    at ModuleLoader.eval (node:internal/modules/esm/loader:278:23)
    at node:internal/process/execution:77:24
    at asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:11)
    at Object.runEntryPointWithESMLoader (node:internal/modules/run_main:123:19)
    at evalModuleEntryPoint (node:internal/process/execution:76:47)
    at node:internal/main/eval_string:37:3

Node.js v24.11.1
